justifyContent and alignItem property added to fix

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,17 @@
 .header  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  flex-direction: row;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -14,6 +22,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 8px;
 }
 
 a {
